--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: '12.x'
       - name: npm install
         run: npm install
+      - name: lint
+        run: npm run eslint
       - name: build
         run: npm run build
       - if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip') }}
