--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,6 +22,12 @@ jobs:
         run: npm run eslint
       - name: build
         run: npm run build
+      - name: e2e tests
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: http://localhost:5000
       - if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip') }}
         name: deploy to heroku
         uses: akhileshns/heroku-deploy@v3.12.12
