--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,3 +38,9 @@ jobs:
           healthcheck: "https://cryptic-woodland-92575.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
+      - if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip') }}
+        name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.33.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
