--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "react-scripts build",
     "eslint": "eslint \"./**/*.{js,jsx}\"",
     "test:e2e": "cypress run",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
